[gd_scene load_steps=2 format=3 uid="uid://b8mv43waollyk"]

[ext_resource type="Script" uid="uid://v8yuvv247t1q" path="res://src/scripts/multiplayer_menu.gd" id="1_3ekof"]

[node name="Multiplayer-menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ekof")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 314.0
offset_right = 744.0
offset_bottom = 354.0

[node name="HostButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Criar uma sala"

[node name="JoinButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Entrar em uma sala"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 976.0
offset_top = 542.0
offset_right = 1070.0
offset_bottom = 573.0
text = "Iniciar jogo"

[node name="NameInputContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 376.0
offset_right = 669.0
offset_bottom = 416.0

[node name="NameLabel" type="Label" parent="NameInputContainer"]
layout_mode = 2
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="NameInputContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
